Improved OperatorTypeNode.operations